# ibkr_service

./: .dockerignore  .env  .gitignore  .pdm-python  DockerFile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml
nginx/: nginx.conf
src/: Server.py  api.py  config.py  logging_settings.py  runfile.py  sec_def.py  test.py
src/APIRoutes/: MainRouter.py
src/Archive/: base_storage_client.py
src/Brokerages/: __init__.py  base_account_client.py
src/Enums/: strategy_definitions.py
src/Handlers/: AccountHandler.py  strategy_handler_router.py
src/MarketData/: __init__.py  base_market_data_client.py
src/Models/: contract.py
src/MongoDB/: CheckConnection.py  mongo_client.py
src/Strategies/: __init__.py  base_strategy.py  test_strategy.py
src/data_classes/: contract.py  portfolio.py
src/definitions/: market_data_definitions.py  order_definitions.py  securities_definitions.py  trading_client_definitions.py
src/enum_definitions/: order_definitions.py  securities_definitions.py
src/handlers/: market_data_handler.py  storage_client_handler.py  strategy_handler.py  trading_client_handler.py
src/ibkr_client/: base_platform_client.py  ibkr_rest_client.py
src/ibkr_strategies/: base_strategy.py  stock_strategies.py
src/market_data_clients/: __init__.py  base_market_data_client.py
src/routers/: main_router.py  market_data_handler_router.py  storage_handler_router.py  strategy_handler_router.py  trading_handler_router.py
src/storage_clients/: __init__.py  base_storage_client.py  mongo_client.py  (+1 more)
tests/: test_ibkr_rest_client.py
(+55 files in other folders)
